# oatbrain

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  INBOX_PLAN.md  INBOX_SPEC.md  MERMAID_PLAN.md  Makefile  PALETTE_PLAN.md  PLAN.md  PLAN_HIGHLIGHT.md  README.md  SIMPLIFICATION.md  SPEC.md  TASKS.md  TREE_EXPANSION_TEST_PLAN.md  WATCHER_PLAN.md  WIKI_PLAN.md  WIKI_QUESTIONAIRE.md  audit_vault.py  dom-patching-proposal.md  fix-bug.skill  missing_features_report.md  pyproject.toml  run.sh  tach.toml
.github/workflows/: ci.yml
plans/: QUESTIONNAIRE.md  SPEC_MULTITAB.md
src/oatbrain/: __main__.py
src/oatbrain/adapters/: config.py  env.py  filestore.py  renderer.py  state.py  theme.py  watcher.py
src/oatbrain/app/: bootstrap.py
src/oatbrain/core/: bus.py  state.py  vault.py  wikilink.py
src/oatbrain/ui/: editor.py  editor_area.py  group_pane.py  headerbar.py  palette.py  preview.py  statusbar.py  terminal.py  tree.py  window.py
tests/: conftest.py
tests/gui/: conftest.py  test_smoke.py
tests/gui/ui/: test_editor_clipboard.py  test_editor_groups.py  test_editor_lifecycle.py  test_editor_mode.py  test_editor_reload.py  test_inbox_logic.py  test_mermaid_fetch.py  test_multitab_gui.py  test_persistence_bug.py  test_preview.py  test_terminal_clipboard.py  test_terminal_paste.py  test_tree_bug_duplicate.py  test_tree_bugs.py  test_tree_expansion_harness.py  test_tree_file_events.py  test_webkit_js.py  test_widgets.py
tests/unit/: test_imports.py
tests/unit/adapters/: test_local_filestore.py  test_markdown_it_renderer.py  test_theme_loader.py  test_watcher.py  (+3 more)
(+58 files in other folders)
